chore: use event exporter to get Event in sms code